# summagram-public

./: .dockerignore  .env.example  .gitignore  .pyre_configuration  BUILD_INSTRUCTIONS.md  README.md  auth.py  automigrate.sh  docker-compose.yml  extractor.py  find_memes.py  gpu_mem.py  indexer.py  init_db_script.py  jaeger-config.yaml  jaeger-test-config.yaml  llm_setup.py  piccolo_conf.py  pyproject.toml  pyrefly.toml  qa.sh  requirements.txt  run.sh  security.py  sql_test.py  stats.py  stop.sh  test_dbg.py  test_intent.py  test_pytest_mock.py  tests_run.sh  tests_run_frontend.sh  tmp_check_schema.py  utils.py
.context/: ADR_LOG.md  API_CONTRACTS.md  CONFIGURATION.md  DB_SCHEMA.md  DOCKER_BEST_PRACTICES.md  MEDIA_PROCESSING.md  SYSTEM_OVERVIEW.md  TECH_STACK.md  USER_STORIES.md  bug_fixes.md
.devcontainer/: devcontainer.json  devcontainer.json.bak  docker-compose.dev.yml
backend/: Dockerfile  import_check.py  inference.py  main.py  models.py  prompts.py  requirements.txt  retrieval.py  routes.py  scheduler.py  service.py  session_agent.py  session_helpers.py  session_tools.py  sglang_client.py  system_stats.py  task_queue.py  utils.py  video_utils.py
bug_fixes/: ERR-0013-docker-wsl-gpu.md  ERR-0014-jaeger-exporter-config.md  ERR-0015-session-synthesis-persona.md  ERR-0016-gpu-busy-race.md  ERR-0017-docker-postgres-permission.md  ERR-0018-postgres-port.md  ERR-0019-etl-asyncpg-missing.md  ERR-0020-postgres-auth-etl.md  ERR-0023-cuda-graph-capture-timeout.md  ERR-0024-nvidia-smi-analytics.md  ERR-0027-piccolo-migration-uv-env.md  ERR-0028-uv-not-found-etl-migration.md  ERR-0029-automigrate-script.md  ERR-0030-docker-port-conflict-vision.md  ERR-0031-telegram-node-metadata-media.md  ERR-0032-postgres-int-out-of-range.md  ERR-0033-token-count-exceeds-limit.md  ERR-0034-telegram-etl-fixes.md  ERR-0040-pydantic-alias-population.md  ERR-0043-pymorphy3-natasha-missing.md  ERR-0044-rapidfuzz-dateparser-transformers-missing.md  ERR-0047-vision-vllm-num2words.md  ERR-0048-text-vllm-gpu-oom.md  ERR-0049-text-vision-oom.md  error_001_dns_resolution_failure.md  error_002_silent_timeout.md  (+3 more)
etl/: main.py  (+16 more)
(+187 files in other folders)
