[project]
name = "summagram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "caldav>=2.2.3",
    "ics>=0.7.2",
    "llama-index>=0.12.52",
    "llama-index-llms-openai>=0.4.7",
    "llama-index-program-openai>=0.3.2",
    "llama-index-llms-openai-like>=0.1.3",
    "llama-index-embeddings-huggingface>=0.2.0",
    "llama-index-vector-stores-chroma>=0.1.0",
    "nest-asyncio>=1.6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "streamlit>=1.53.1",
    "telethon>=1.42.0",
    "watchdog>=6.0.0",
    "chromadb>=0.4.0",
    "huggingface_hub>=0.20.0",
    "pillow>=10.0.0",
    "opentelemetry-api>=1.21.0",
    "opentelemetry-sdk>=1.21.0",
    "opentelemetry-exporter-otlp>=1.21.0",
    "openinference-instrumentation-llama-index>=2.0.0",
    "loguru>=0.7.3",
    "idna>=3.7",
    "tenacity>=8.3",
    "httpx>=0.28.1",
    "sse-starlette>=3.3.2",
    "asyncpg>=0.31.0",
    "psycopg2-binary>=2.9.11",
    "piccolo[postgres]>=1.32.0",
    "natasha>=1.6.0",
    "pymorphy3>=2.0.6",
    "pymorphy3-dicts-ru>=2.4.417150.4580142",
    "pymorphy3-dicts-uk>=2.4.1.1.1663094765",
    "dateparser>=1.3.0",
    "rapidfuzz>=3.14.3",
    "transformers>=4.57.6",
    "torch>=2.6.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "torchaudio>=2.5.1",
    "accelerate>=0.26.0",
    "bitsandbytes>=0.40.0",
    "vllm>=0.8.5.post1",
    "autoawq>=0.2.0",
    "flash-attn>=2.0.0",
]

[dependency-groups]
dev = [
    "ffmpeg-python>=0.2.0",
    "opencv-python-headless>=4.13.0.90",
    "pyrefly>=0.55.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
    "scenedetect>=0.6.7.1",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
autoawq = ["setuptools"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.pytest.ini_options]
markers = [
    "unit: unit test",
    "integration: integration test",
]
